# MAIR

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  StorageAccess.md  dvc.yaml  pyproject.toml  storage-config-instruction.md  visualise_pipeline.sh
.dvc/: config
.dvc/plots/: confusion.json  confusion_normalized.json  linear.json  scatter.json  smooth.json
articles/: .gitignore
arxiv_dump/: affiliations.json  arxiv_categories.txt  download.py  extract_affiliations.py  extract_sources.sh  keywords.py  notes.txt  utils.py
arxiv_dump/sci-parse_output/: 1109.6182v1.json  1404.1908v1.json  1407.5212v1.json  1412.4643v3.json  1503.07810v6.json  1505.06378v3.json  1505.07434v3.json  1506.01113v2.json  1509.06321v1.json  1510.03349v2.json  1512.02479v1.json  1602.04938v3.json  1606.03490v3.json  1606.05386v1.json  1606.05798v1.json  (+490 more)
data/: .gitignore  affiliations_annotated.json  ai_governance_meta.csv  annotated_orgs.tsv  documents_references.csv  oecd_meta.csv
mair/: .gitignore  affiliations_extraction.py  coreference_resulution.py  data_loading.py  deontics.py  doc_ids.py  downloading.py  papers_processing_utils.py  pdf_parsing.py  read_write_utilities.py  s2orc_links.py.dvc
mair-tools/: pyproject.toml
mair-tools/mair_tools/: notebook_utils.py
mair-tools/tests/: test_mair_tools.py
mair_tools/: notebook_utils.py  papers_processing.py  pdf_processing.py
notebooks/: 030221 regulations deontic  analysis.ipynb  1. Extracting text from regulations.ipynb  1.1. Extracting text from arxiv articles.ipynb  1.2 Cleaning arxiv articles.ipynb  1.2. Extracting text from arxiv articles.ipynb  1.3. Exploration of arxiv papers.ipynb  10.12.2020 Abstracts keywords analysis.ipynb  10.12.2020 Filtering AI papers from S2ORC.ipynb  16.12.2020 Affiliations NEL .ipynb  180521DocumentPaperCitationGraphAnalysis.ipynb  2. Exploration of articles from FAT20.ipynb  2.1. Extracting text from regulations and exploration.ipynb  2021.03.25_BP_ai_reg.ipynb  3.1. Exploration of articles from FAT20.ipynb  AnnotatedAfilliations.ipynb  BP_looking_through_documents.ipynb  CitationGraphViz.ipynb  ExtractAffiliationEmails.ipynb  S2ORC coverage.ipynb  Sci-parse arxiv processing.ipynb  Sci-parse output analysis.ipynb  eng_pronouns.txt
scripts/: analyse_deontics_sentences.py  calculate_docs_embeddings.py  categorize_academia_industry.py  citations_graph.py  clean_raw_papers_text.py  docs_papers_link.py  download_arxiv_dump.py  download_arxiv_idlist.py  download_full_text_s2orc.py  download_s2orc.py  download_s2orc_meta.py  extract_affiliations.py  extract_sources.sh  filter_ai_s2orc.py  get_all_AI_arxiv_metadata.py  merge_metadata.py  parse_arxiv_pdfs.py  parse_docs_to_text.py  process_arxiv_spacy.py  process_legal_docs_spacy.py  process_pdf_sci-parse.py  scrap_ai_governance_database.py  scrap_nesta_ai_database.py  scrap_oecd_ai_database.py  unpack_sources.sh
scripts_deontics_papers/: deontics_in_papers.Rmd  deontics_in_papers.html
scripts_r/: deontics.Rmd  deontics.html  deontics_2.Rmd  deontics_3.Rmd
tests/: test_mair_tools.py
(+200 files in other folders)
