[tool.poetry]
name = "mair"
version = "0.1.0"
description = ""
authors = ["Stanisław Giziński <s.gizinski84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pdfminer = "^20191125"
pypdf2 = "^1.26.0"
tqdm = "^4.49.0"
spacy = "^2.3.2"
pandas = "^1.1.2"
matplotlib = "^3.3.2"
sklearn = "^0.0"
seaborn = "^0.11.0"
nltk = "^3.5"
gensim = "^3.8.3"
pyLDAvis = "^2.1.2"
feedparser = "^6.0.2"
pandoc = "^1.0.2"
plotly = "^4.13.0"
en-core-sci-sm = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.3.0/en_core_sci_sm-0.3.0.tar.gz"}
pigeon-jupyter = "^0.1.0"
semanticscholar = "^0.1.6"
BabelPy = "^1.0.1"
bs4 = "^0.0.1"
wget = "^3.2"
sklearn-pandas = "^2.1.0"
typer = "^0.3.2"
transformers = "^4.4.2"
tensorflow = "^2.4.1"
dvc = {extras = ["gs"], version = "^2.0.7"}
flair = "^0.8.0"
defaultlist = "^1.0.0"
neuralcoref = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.7.1"
jupyter = "^1.0.0"
isort = "^5.5.4"
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
