[tool.poetry]
name = "mair-tools"
version = "0.1.0"
description = ""
authors = ["Stanisław Giziński <s.gizinski84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pdfminer = "^20191125"
pypdf2 = "^1.26.0"
tqdm = "^4.49.0"
spacy = "^2.3.2"
pandas = "^1.1.2"
matplotlib = "^3.3.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.7.1"
jupyter = "^1.0.0"
isort = "^5.5.4"
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
